--- a/.github/workflows/stageone.yml
+++ b/.github/workflows/stageone.yml
@@ -1,18 +1,11 @@
-name: Check NextJs build
+name: Check NextJs build and Linting
 
 on:
   push:
     branches: ["main"]
 
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
-  build:
+  basic-checks:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -49,5 +42,7 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Run ESlint
+        run: npm run lint
       - name: Build with Next.js
         run: npm run build
