--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "next": "^14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
+    "react-type-animation": "^3.2.0",
+    "tailwindcss-animation-delay": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
