--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,10 +3,11 @@ on:
     push:
         branches:
             - main
-    workflow_dispatch:
     workflow_run:
         workflows: ['Check NextJs build and Linting']
         types: [completed]
+        branches:
+          - main
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
@@ -16,7 +17,16 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          browser: chrome
+          build: npm run build
+          start: npm run dev
+          wait-on: "http://localhost:3000"
           component: true
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with:
+          browser: chrome
+          build: npm run build
+          start: npm run dev
+          wait-on: "http://localhost:3000"
    
