--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,8 @@ on:
             - main
     workflow_run:
         workflows: ['Testing']
-        types: [completed]
+        types: 
+          - completed
         branches:
           - main
 jobs:
