--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,8 @@ on:
             - main
     workflow_run:
         workflows: ['Check NextJs build and Linting']
-        types: [completed]
+        types: 
+          - completed
         branches:
           - main
 jobs:
@@ -26,7 +27,3 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           browser: chrome
-          build: npm run build
-          start: npm run dev
-          wait-on: "http://localhost:3000"
-   
