--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -56,14 +56,14 @@ jobs:
       steps:
         - name: Checkout
           uses: actions/checkout@v4
-        - name: Cypress run Component
+        - name: Cypress run E2E
           uses: cypress-io/github-action@v6
           with:
             browser: chrome
             build: npm run build
             start: npm run dev
             wait-on: "http://localhost:3000"
-        - name: Cypress run E2E
+        - name: Cypress run Component
           uses: cypress-io/github-action@v6
           with:
             browser: chrome
@@ -72,7 +72,7 @@ jobs:
             wait-on: "http://localhost:3000"
             component: true
 
-    Deploy-Production:
+    deploy-vercel:
       runs-on: ubuntu-latest
       needs: [basic-checks, cypress-run]
       steps:
