--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "framer-motion": "^11.3.17",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -23,8 +24,8 @@
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.0.1",
     "cypress": "^13.13.1",
     "eslint": "^8.57.0",
