--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -6,6 +6,9 @@ on:
     push:
         branches:
             - main
+        paths:
+            - src/**
+            - cypress/**
 
 jobs:
     basic-checks:
